Priority list issue (#175)
* [fix] priority-list UAT issue

* [fix] extra padding removed

* [fix] extra padding removed

* [fix] lint error

--- a/blocks/priority-list/priority-list.css
+++ b/blocks/priority-list/priority-list.css
@@ -1,3 +1,7 @@
+.section.priority-list-container{
+    padding-bottom: 0;
+}
+
 .priority-list-wrapper .priority-list {
   display: grid;
   max-width: var(--screen-width);
@@ -326,7 +330,7 @@
 @media (width >1024px) {
   .priority-list-wrapper .priority-list {
     grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
+    gap: 0 80px;
   }
 
   .priority-list-wrapper .priority-list .right-column-container {
